# rust-websocket-redis-trial

./: docker-compose.yml
client/: package-lock.json  vite.config.ts
client/.devcontainer/: devcontainer.json
client/src/: App.tsx
ws-server/: Cargo.toml
ws-server/.devcontainer/: devcontainer.json
ws-server/src/: main.rs
